emptied code to make space

--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,1 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-a {
-    text-decoration: none;
-    color: darkslateblue;
-}
-
-body h1{
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.head-text {
-    display: flex;
-    text-align: center;
-    margin: 20px 0;
-}
-
-#noteForm {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    margin: 0 auto;
-}
-
-form * {
-    margin-bottom: 8px;
-    padding: 8px 12px;
-}
-
-form button {
-    background-color: darkslateblue;
-    color: white;
-    cursor: pointer;
-}
-
-.noteHeader {
-    margin: 20px 0 25px 5%;
-}
-
-main.container {
-    padding: 0 5%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-}
-
-.note>* {
-    margin: 5px 0;
-}
-
-.note p.noteText {
-    font-weight: 700;
-}
+/* RESETS */
